package minjun.payment.domain;

public enum PaymentStatus {

  SUBMITTED, APPROVED, REJECTED, CANCELLED
}
